--- a/index.html
+++ b/index.html
@@ -1,13 +1,144 @@
-<html>
-  <head>
-    <title>Aasaan Apps</title>
-  </head>  
-  <body>
-    <script>
-      window.location.replace('https://aasaanapps.com');
-    </script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" href="/images/favicon.png">
+  <link rel="shortcut icon" href="/images/favicon.png" />
+  <link rel="apple-touch-icon" href="/images/aasaan-apps-logo.png">
+  <meta name="author" content="Ankit Mahato">
+  <meta name="keywords" content="rent,hra,income tax,proof,india,receipt,aasaan,apps">
+  <meta name="description"
+    content="Aasaan Apps, as its name suggests, strives toward making life easy by providing simple, ad-free and innovative mobile app solutions.">
+  <meta property="og:title" content="Aasaan Apps - Making life easy, one app at a time!">
+  <meta property="og:description"
+    content="Aasaan Apps, as its name suggests, strives toward making life easy by providing simple, ad-free and innovative mobile app solutions.">
+  <meta property="og:image" content="https://aasaanapps.github.io/images/banner.png">
+  <meta property="og:url" content="https://aasaanapps.github.io/">
+  <meta name="twitter:title" content="Aasaan Apps - Making life easy, one app at a time!">
+  <meta name="twitter:description"
+    content="Aasaan Apps, as its name suggests, strives toward making life easy by providing simple, ad-free and innovative mobile app solutions.">
+  <meta name="twitter:image" content="https://aasaanapps.github.io/images/banner.png">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <title>Aasaan Apps - Making life easy, one app at a time!</title>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156302156-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-156302156-1');
+  </script>
+
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700|Roboto:300,400,700&display=swap"
+    rel="stylesheet">
+
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+  <!-- Custom styles for this template -->
+  <link href="/css/main-page.css" rel="stylesheet">
+
+  <!-- update the version number as needed -->
+  <script defer src="/__/firebase/7.16.0/firebase-app.js"></script>
+  <script defer src="/__/firebase/7.16.0/firebase-analytics.js"></script>
+
+  <!-- initialize the SDK after all desired features are loaded -->
+  <script defer src="/__/firebase/init.js"></script>
+
+</head>
+
+<body>
+
+  <header>
+
+    <nav class="navbar navbar-expand-md navbar-light" style="background-color: #eeeeee;">
+      <div class="container-fluid">
+        <div class="navbar-brand">
+          <a class="text-dark text-decoration-none p-1" href="/"><img src="/images/aasaan-apps-logo.png"
+              style="height: 2rem;"> Aasaan Apps</a>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="navbar-item">
+              <a class="nav-link" href="https://play.google.com/store/apps/details?id=com.aasaanapps.rent_receipt_app"
+                target="_blank">Rent Receipt App</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="hero position-relative overflow-hidden p-1 text-center">
+      <div class="col-md-5 p-lg-1 mx-auto my-1">
+        <img class="img-fluid" src="images/aasaan-apps-logo.png" style="max-width: 100%; height: 150px;">
+        <p class="lead fw-bold fs-2">
+          Aasaan Apps
+        </p>
+        <p class="lead">
+          Making life easy, one app at a time!
+        </p>
+      </div>
+    </div>
+
+
+    <main role="main">
+      <div class="container marketing p-md-1">
+        <h2 class="m-3"></h2>
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">Rent Receipt App</h2>
+            <p class="lead">Creating rent receipt for Income Tax House Rent Allowance (HRA) proof had never been so
+              easy.<br />
+              Using this safe and secure app you can easily generate rent receipts in different currencies - Rupee (₹),
+              Dollar ($), Pound (£) and Euro (€).<br />
+              Save the rent receipt as PDF, print it directly using your phone or share it via Whatsapp, E-mail, Slack,
+              Google Drive, Bluetooth, and more.</p>
+            <a href="https://play.google.com/store/apps/details?id=com.aasaanapps.rent_receipt_app" target="_blank"><img
+                src="images/google-play-badge.png"></a>
+            <a href="/rentreceipt/" target="_blank"><img src="images/web-badge.png"></a>
+          </div>
+
+          <div class="col-md-5 order-md-2" style="padding: 1rem 0rem;">
+            <div class="ratio ratio-16x9">
+              <iframe src="https://www.youtube.com/embed/HINAlsukqmQ?rel=0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <hr class="featurette-divider">
+      </hr>
+      <!-- /END THE FEATURETTES -->
+
+
+      <!-- FOOTER -->
+      <footer class="container">
+        <div class="row footer-row">
+          <p><a href="/">Home</a> | <a href="/privacy.html">Privacy Policy</a></p>
+        </div>
+        <div class="row footer-row">
+          <p>Copyright &copy; 2020-2021 Aasaan Apps</p>
+        </div>
+      </footer>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"></script>
+
+</body>
+
 </html>
-
- 
-
